--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="home-background-image">
                 <!-- Hero Text -->
                 <div class="home-text">
-                    <h1 class="display-1 font-weight-bold">Hi, I'm Abhay ;)</h1>
-                    <p><span class="typing-animation-effect">Developer</span></p>
+                    <h1 class="font-weight-bold">Hi, I'm Abhay ;)</h1>
+                    <p><span class="typing-animation-effect"></span></p>
                 </div>
             </div>
         </section>
@@ -265,6 +265,12 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+        <!-- Typewriter -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/TypewriterJS/1.0.0/typewriter.min.js"></script>
+
+        <!-- Custom script -->
+        <script src="script.js"></script>
 
     </body>
 </html>
